# aligner

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile-cli  Dockerfile.cli  Dockerfile.node  Makefile  README.md  beautify.py  docker-compose-kafka.yml  docker-compose.yml  insert_blast_results.py
aligner-core/: Cargo.toml
aligner-core/src/: alignment.rs  alignment_result.rs  enums.rs  lib.rs
aligner-core/src/heuristic/: mod.rs
aligner-core/src/pwm/: mod.rs
aligner-core/src/simple/: mod.rs
aligner-core/src/statistics/: mod.rs
aligner-helpers/: Cargo.toml
aligner-helpers/src/: lib.rs
aligner-helpers/src/csv/: mod.rs
aligner-helpers/src/files/: mod.rs
aligner-helpers/src/matrices/: mod.rs
aligner-web/: Cargo.toml
aligner-web/src/: lib.rs
aligner-web/src/repository/: mod.rs  models.rs  queries.rs
config/: opts_config.yml
config/dispatcher/: dev.env  prod.env
config/node/: dev.env  prod.env
diagrams/: scheme_csv.puml  scheme_exploring.puml  scheme_high_level.puml  scheme_router.puml  scheme_search.puml  scheme_testing.puml
examples/: book_example.fasta  human_gene_example.fasta  protein.fasta
src/: lib.rs  main.rs
src/align/: align_result.rs  aligner.rs  aligner_core.rs  enums.rs  heuristic_alignment.rs  mod.rs  sequences.rs  simple_aligner.rs
src/database/: mod.rs  queries.rs
src/files/: mod.rs
src/matrices/: mod.rs
src/statistics/: mod.rs
src/tests/: mod.rs  test_alignment.rs
src/web/: models.rs
static/: BLOSUM50.csv  PAM250.csv
