[package]
name = "aligner-core"
version = "0.1.2"
authors = ["l.marder"]
edition = "2021"

[dependencies]
aligner-helpers = { version = "0.1.0", path = "../aligner-helpers" }
clap = { version = "3.0.14", features = ["derive"] }
ndarray = { version = "0.15.3", features = ["serde"] }
futures = "0.3.16"
num-traits = "0.2.14"
ndarray-stats = "0.5.0"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
log = "0.4.14"
rand = "0.8.4"
seq_io = "0.3.1"
serde_json = "1.0.79"
csv = "1.1.6"