[package]
name = "aligner-helpers"
version = "0.1.0"
authors = ["l.marder"]
edition = "2021"

[dependencies]
csv = "1.1.6"
ndarray = { version = "0.15.3", features = ["serde"] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.0"
roots = "0.0.7"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
pretty_env_logger = "0.4.0"
log = "0.4.14"
